# solinterp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  interpolation.c  symmetries.c  symmetries.h  tables.c  tables.h
test/: CMakeLists.txt  heatmap.py  test_interpolation.c  test_symmetries.c  test_tables.c
test/resources/: AliceSprings_N10M24_ext.csv  CMakeLists.txt  alice_springs_interp.csv  alice_springs_sample.csv  newcastle_interp.csv  newcastle_sample.csv  table_test_file1.csv
